tests/fail/BitAnd.java
package fail;

import java.lang.System;

public class BitAnd {
	public static void main(String[] args) {
		System.out.println('a' & 2);
	}
}